--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>  
+    <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
   </head>
   <body>
     <div id="root"></div>
